syntax = "proto3";

package rms;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "rms.proto";

option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;
option (gogoproto.stringer_all) = false;
option (gogoproto.protosizer_all) = true;
option (gogoproto.sizer_all) = false;
option (gogoproto.stable_marshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message RecExample {
    //*** Start of predefined section ***//
    reserved 1 to 15, 1792 to max;
    uint32 Polymorph = 16;
    bytes BodyHash = 1791 [(gogoproto.customtype) = "RecordBodyHolder", (gogoproto.nullable) = false];
    //*** End of predefined section ***//

    string Str = 21 [(gogoproto.customtype) = "github.com/insolar/assured-ledger/ledger-core/v2/vanilla/longbits.ByteString", (gogoproto.nullable) = false];
}

message RecExample2 {
    //*** Start of predefined section ***//
    reserved 1 to 15, 1792 to max;
    uint32 Polymorph = 16;
    bytes BodyHash = 1791 [(gogoproto.customtype) = "RecordBodyHolder", (gogoproto.nullable) = false];
    //*** End of predefined section ***//

    bytes RefTo = 22 [(gogoproto.customtype) = "LazyReference", (gogoproto.nullable) = false];
    string Str = 21 [(gogoproto.customtype) = "github.com/insolar/assured-ledger/ledger-core/v2/vanilla/longbits.ByteString", (gogoproto.nullable) = false];
}

message MsgExample {
    //*** Start of predefined section ***//
    reserved 1 to 15, 20 to 1791, 1794 to 1799;
    uint32 MsgPolymorph = 16;
    // put proper Record type here
    RecExample Record = 1792 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
    //*** End of predefined section ***//

    // custom fields
    uint64 MsgParam = 1800;
    bytes MsgBytes = 1801;
}

message MsgHeadExample {
    //*** Start of predefined section ***//
    option (gogoproto.typedecl) = false;
    option (gogoproto.face) = true;
    //*** End of predefined section ***//

    // repeat selected declarations from Msg and/or Record
    uint32 MsgPolymorph = 16;
    uint64 MsgParam = 1800;
}
